--- a/style.css
+++ b/style.css
@@ -10,17 +10,17 @@ margin: 0;
 
 
 .form{height: 430px; width: 480px;
-border: 2px solid white;border-radius: 30px;
+border: 2px solid white;
 justify-content: center;
-text-align: center;box-shadow:inset -1px -2px 5px #bbf1fa;
+text-align: center;box-shadow:inset -5px -5px 9px #03506f;
 margin: auto; }
 
 .form .input{margin-bottom: 35px;margin-top: 10px;}
-input{width: 240px}
-label{font-size: 19px; color: #555;font-weight: bold}
-.finaly{height: 105px;width: 100%;text-align: center;background-color: white;opacity: 0.8;
+input{width: 240px;direction: rtl;}
+label{font-size: 19px; color: #555;font-weight: bold;text-align:right;}
+.finaly{height: 105px;width: 100%;text-align: center;background-color:#03506f;;opacity: 0.8;
 justify-content: center;display: flex;color:white}
-.finaly h4{margin-top: 30px;color:#666;}
+.finaly h4{margin-top: 30px;color:white;text-shadow: 3px  3px 3px #03506f;}
 .bg-dark {
     background-color: #a3cad2;
 }
