--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{padding: 0;
 margin: 0;
-
+background-color: #f9f3f3;
 
 }
 .carousel img{height: 500px;border-bottom:groove;}
@@ -9,14 +9,16 @@ margin: 0;
 
 
 
-.form{height: 430px; width: 480px;
+.form{height: 470px; width: 480px;
 border: 2px solid white;
-justify-content: center;
-text-align: center;box-shadow:inset -5px -5px 9px #03506f;
+justify-content: center;background-color: #eaffd0;
+text-align:right; box-shadow:  4px 4px 6px 5px rgba(0,0,0,0.2);
 margin: auto; }
 
-.form .input{margin-bottom: 35px;margin-top: 10px;}
-input{width: 240px;direction: rtl;}
+.form .input input{margin-bottom: 20px;margin-top: 12px;text-align: center;}
+.form .inpu{margin-bottom: 25px;margin-top: 12px;text-align: center;}
+input{width: 470px;direction: rtl;height: 40px;border-radius: 7px}
+
 label{font-size: 19px; color: #555;font-weight: bold;text-align:right;}
 .finaly{height: 105px;width: 100%;text-align: center;background-color:#03506f;;opacity: 0.8;
 justify-content: center;display: flex;color:white}
