--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ background-color: #f9f3f3;
 
 .form{height: 470px; width: 480px;
 border: 2px solid white;
-justify-content: center;background-color: #eaffd0;
+justify-content: center;background-color: #f4f9f9;
 text-align:right; box-shadow:  4px 4px 6px 5px rgba(0,0,0,0.2);
 margin: auto; }
 
