--- a/style.css
+++ b/style.css
@@ -9,20 +9,20 @@ background-color: #f9f3f3;
 
 
 
-.form{height: 470px; width: 480px;
-border: 2px solid white;
+.form{height: 470px; width: 500px;
+border: 2px solid white;border-radius: 0.5%;
 justify-content: center;background-color: #f4f9f9;
 text-align:right; box-shadow:  4px 4px 6px 5px rgba(0,0,0,0.2);
 margin: auto; }
 
-.form .input input{margin-bottom: 20px;margin-top: 12px;text-align: center;}
+.form .input input{margin-bottom: 20px;margin-top: 12px;text-align: right; margin-right: 10px}
 .form .inpu{margin-bottom: 25px;margin-top: 12px;text-align: center;}
-input{width: 470px;direction: rtl;height: 40px;border-radius: 7px}
+input{width: 470px;direction: rtl;height: 40px;border-radius: 7px;}
 
-label{font-size: 19px; color: #555;font-weight: bold;text-align:right;}
+label{font-size: 19px; color: #555;font-weight: bold;text-align:right; margin-right: 10px}
 .finaly{height: 105px;width: 100%;text-align: center;background-color:#03506f;;opacity: 0.8;
-justify-content: center;display: flex;color:white}
-.finaly h4{margin-top: 30px;color:white;text-shadow: 3px  3px 3px #03506f;}
+color:white}
+.finaly h4{color:white;text-align: center;justify-content: center}
 .bg-dark {
     background-color: #a3cad2;
 }
